--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content="This is the profile of Clément">
 		<link rel="stylesheet" href="https://use. fontawesome.com/releases / v5.2.0/css/all.css" integrity="sha384-hWvj flwxL6sNznt ih27bfxkr27PmbbK /iSv]+a4+0owXq79v+1sFkw54b0GbiDQ" crossorigin="anonymous">
-		<script src="https://kit.fontawesome.com/ee6a6bcbc2.js" crossorigin="anonymous"></script>			<!logo liens à revooir>
+		<script src="https://kit.fontawesome.com/b0982a2d3b.js" crossorigin="anonymous"></script>			<!logo liens à revooir>
 
 	</head>
 
@@ -40,12 +40,12 @@
 				<ul class=" list-inline">
 					<li>
 						<a href="https://www.linkedin.com/in/cl%C3%A9ment-hugou-329594254/" target="_blank"> Linkedin
-						<i class="fab fa-twitter-square"></i>
+						<i class="fa-brands fa-linkedin"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://www.instagram.com/hgu.clement_/" target="_blank">Instagram
-						<i class="fa-brands fa-github-square"></i>
+						<a href="https://www.instagram.com/hgu.clement_/" target="_blank"><strong>Instagram</strong>
+						<i class="fa-brands fa-instagram"></i>
 						</a>
 					</li>
 				</ul>
